# caretaker

./: .gitignore  README.md  caretaker.db  claude_desktop_config.json  config.json  main.py  pyproject.toml
capture/: capture_engine.py  entity_extractor.py  long_message_handler.py  type_classifier.py
compression/: compressor.py  keyword_generator.py  local_compressor.py  templates.py
mcp_server/: injector.py  server.py  tools.py
memory/: conflict_checker.py  importance_scorer.py  temperature_engine.py
retrieval/: budget_engine.py  keyword_extractor.py  memory_selector.py  retrieval_engine.py  semantic_searcher.py  topic_detector.py
scheduler/: compression_queue.py  maintenance.py
storage/: local_db.py  vector_db.py
storage/migrations/: v001_initial.sql
tests/: conftest.py
tests/fixtures/: fixtures.py
tests/phase1/: conftest.py  test_capture_engine.py  test_entity_extractor.py  test_local_db.py  test_mcp_tools.py  test_retrieval_engine.py  test_type_classifier.py
tests/phase2/: test_phase2.py
