[project]
name = "caretaker"
version = "0.1.0"
description = "Universal memory layer for AI agents"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "fastmcp>=3.2.4",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
